src/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-family: "Montserrat", system-ui, sans-serif;
  background: #13151a;
  background-size: 224px;
  color: #fffefe;
}

body {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  min-height: 100vh;
  overflow-x: hidden;
}

header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.5rem;
  height: 3.5rem;

  nav {
    display: flex;
    gap: 1rem;
  }

  .nav-icon {
    width: 2rem;
    height: 2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid #434343;
    border-radius: 5px;
    font-size: 1.3rem;
    cursor: pointer;
    padding: 5px;
  }
}

.rate-btn {
  transition: 0.35s;
  overflow: hidden;

  
  span {
    display: none;
    transform: translate(-50%, -50%);
    font-size: 1.1rem;
  }

  .icon {
    transform: none;
  }
}

.rate-btn:hover {
  width: 80px;
  display: flex;
  justify-content: space-around;

  span {
    display: block;
    transform: none;
    transition: 0.3s;
  }

  .icon {
    transform: translate(-200%, 0);
    display: none;
    transition: transform 10s;
  }
}

.container {
  margin-top: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex: 1;
}

.activity-list {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fill, 250px);
  justify-content: center;
  list-style: none;
  gap: 1rem;
  padding: 1rem;

  li {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1.5rem;
    border: 1px solid #2f2f2f;
    border-radius: 4px;
    cursor: pointer;

    div {
      width: 100%;
      display: flex;
      flex-flow: column wrap;
    }
  }
}

.activity-form {
  max-width: 400px;
  width: 65%;
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  gap: 1rem;

  label {
    width: 100%;
    display: flex;
    flex-flow: column;
  }

  input {
    padding: 0.5rem;
    border: 1px solid #2f2f2f;
    border-radius: 4px;
  }

  button {
    width: fit-content;
    padding: 0.5rem;
    border: 1px solid #3a3a3a;
    color: #fff;
    background-color: inherit;
    border-radius: 4px;
    cursor: pointer;
  }
}

a {
  color: inherit;
  text-decoration: none;
}

.loader {
  width: 60px;
  height: fit-content;
  aspect-ratio: 4;
  background: radial-gradient(circle closest-side,#fff 90%,#fff0) 0/calc(100%/3) 100% space;
  clip-path: inset(0 100% 0 0);
  animation: l1 1s steps(4) infinite;
}

.activity-modal {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.753);
}

.modal-content {
  position: relative;
  min-width: 300px;
  width: 25vw;
  min-height: 200px;
  background-color: inherit;
  padding: 20px;
  border-radius: 5px;
  border: 1px solid #272727;

  h3 {
    margin-bottom: 1rem;
  } 
}

.activity-info {
  display: grid;
  grid-template-columns: 1fr 1fr;
  flex-wrap: wrap;
  gap: 1rem;

  .description {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}

.btn-close {
  position: absolute;
  top: 10px;
  right: 10px;
  border: 0;
  color: inherit;
  cursor: pointer;
  background: none;
  font-weight: bolder;
}

footer {
  height: 3rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

@keyframes l1 {to{clip-path: inset(0 -34% 0 0)}}

@media (max-width: 500px) {
  .activity-list {
    flex-flow: row wrap;
  }

  footer {
    font-size: 0.8rem;
  }
}

